tests/fixtures/invalid/pow_set_none_set.py
# Cannot call pow() with Set[int], None, Set[int]
x = pow({1, 2, 3}, None, {1, 2, 3})
